demos/blue-green/good/deployment-green.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-green
      color: green
  template:
    metadata:
      labels:
        app: blue-green
        color: green
    spec:
      volumes:
        - name: html
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
              readOnly: true
