demos/blue-green/good/service-blue.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue-green
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
