demos/blue-green/good/service-green.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: blue-green
    color: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
